tests/health/tests__lsp__field_completion_test.toit.gold
tests/lsp/field_completion_test.toit:36:5: error: Can't access instance members before `super` call.
    field
    ^~~~~
tests/lsp/field_completion_test.toit:40:5: error: Can't access instance members before `super` call.
    field
    ^~~~~
tests/lsp/field_completion_test.toit:45:5: error: Can't access instance members before `super` call.
    field = 0
    ^~~~~
tests/lsp/field_completion_test.toit:49:5: error: Can't access instance members before `super` call.
    field = 0
    ^~~~~
